# ilab_demos

./: README.md
ilab_biman_demo/: CMakeLists.txt  README.md  package.xml
ilab_biman_demo/bringup/config/: controllers.yaml  franka_base_frame.yaml  franka_controllers.yaml  ilab_biman_demo.rviz  ur_controllers.yaml  view_ilab_demo.rviz
ilab_biman_demo/bringup/launch/: ilab_biman_demo.launch.py  ilab_biman_demo_pick_and_place.launch.py  view_ilab_biman_demo.launch.py
ilab_biman_demo/description/moveit2/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
ilab_biman_demo/description/srdf/: ilab_biman.srdf.xacro
ilab_biman_demo/description/urdf/: ilab_biman.urdf.xacro  ilab_biman_franka.urdf.xacro  ilab_biman_ur.urdf.xacro
ilab_biman_demo/src/: ilab_biman_demo_pick_and_place_node.cpp
